# hubo

./: .gitignore  .gitmodules  README.md
hubo_control/: CMakeLists.txt  package.xml
hubo_control/config/: hubo_control.yaml  robot_state_only.rviz
hubo_control/launch/: demo.launch  hubo_control.launch  rviz_only.launch
hubo_description/: package.xml
hubo_description/meshes/: use_collision_geometry_for_visualization.bash
hubo_description/meshes/sensors/kinect_prosilica_v0/: kinect_centered.dae
hubo_description/robots/: basic_hubo.urdf.xacro  hubo_with_kinect.urdf.xacro
hubo_description/urdf/: hubo.urdf  hubo.urdf.xacro
hubo_description/urdf/sensors/: kinect_prosilica_camera.gazebo.xacro  kinect_prosilica_camera.urdf.xacro
hubo_description/v-rep-scene/: hubo_ik.ttt  hubo_imported_from_urdf.ttt
hubo_gazebo/: CMakeLists.txt  package.xml
hubo_gazebo/worlds/: shapes.world
hubo_ikfast_right_arm_plugin/: CMakeLists.txt  huboplus_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
hubo_ikfast_right_arm_plugin/src/: huboplus_right_arm_ikfast_moveit_plugin.cpp  huboplus_right_arm_ikfast_solver.cpp
